# analavi

./: CMakeLists.txt  compile_commands.json
.clangd/index/: context.cpp.4C94D9BBFC027DCB.idx  context.hpp.03B12D7DFAF29CFF.idx  imconfig.h.7F34894986F6A632.idx  imfilebrowser.h.A96A9991E9A3DF28.idx  imgui.cpp.4B28D81E9B1484A5.idx  imgui.h.2C368985886ED812.idx  imgui_demo.cpp.4D0329DDEB60DE98.idx  imgui_draw.cpp.73AB602B0FB5F8DF.idx  imgui_impl_glfw.cpp.7B575DE01C19F981.idx  imgui_impl_glfw.h.E414C8F1D56201FC.idx  imgui_impl_opengl3.cpp.D55604FD8D933E8C.idx  imgui_impl_opengl3.h.68696278660F3930.idx  imgui_impl_sdl.cpp.4AFAB1CA39D49C7B.idx  imgui_impl_sdl.h.FE20130AA9064F1E.idx  imgui_internal.h.BE1CD9105BA30135.idx  imgui_tables.cpp.63025FA8CB8DFE5F.idx  imgui_widgets.cpp.F3F742E608A73AB3.idx  imstb_rectpack.h.4C95FD71A2EF0C55.idx  imstb_textedit.h.2273AA3DB1903BA3.idx  imstb_truetype.h.C9D1106D90C22E85.idx  log.hpp.5F421BFEED12965F.idx  main.cpp.F1B8A0E7AF69E157.idx  ui.cpp.A55AEF8B33BBF0B4.idx  ui.hpp.2019FF7F1DB46210.idx  ui_panel_controller.cpp.A20D0132A8B524A2.idx  ui_panel_file_browser.cpp.51A6F5CB72D74294.idx  ui_panel_master.cpp.3D17C08A420578A7.idx  ui_panel_output.cpp.60C6E35A75F3B036.idx  ui_panel_video_viewer.cpp.154858C5F58D710D.idx
source/: Makefile  controller.cpp  controller.hpp  main.cpp  ui.cpp  ui.hpp  ui_panel_controller.cpp  ui_panel_file_browser.cpp  ui_panel_master.cpp  ui_panel_output.cpp  ui_panel_video_viewer.cpp  video_viewer.cpp  video_viewer.hpp
